packages/ui/src/ui/containers/ManageTokens/ManageTokensModalContent/ManageTokensModalContent.scss
.manage-tokens-modal-content {
    &__content {
        width: 800px;
    }

    &__filters {
        width: 50%;
        padding: 0 0 12px;
    }

    &__no-content {
        width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    &__new-token {
        padding: 1px 32px 32px;
    }

    &__tokens {
        min-height: 395px;
        padding: 1px 32px 32px;
    }

    &__tokens-table {
        max-height: 400px;
        overflow-y: scroll;
    }

    &__table-cell {
        padding: 8px 0;

        border-top: 0;
        border-left: 0;
        border-right: 0;

        &_name_description {
            white-space: pre-wrap;
        }
    }

    &__generate-token-button {
        margin-bottom: 16px;
    }

    &__tokens-action {
        margin-top: 16px;
        display: flex;
    }
}

